--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "doc"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./bot/bot.js",
+    "start": "node ./bot/bot.js"
   },
   "repository": {
     "type": "git",
