--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "homepage": "https://github.com/lizardman301/Lizard-bot-rsf#readme",
   "dependencies": {
+    "@discordjs/builders": "^0.8.2",
+    "@discordjs/rest": "^0.1.0-canary.0",
     "axios": "^0.24.0",
+    "discord-api-types": "^0.24.0",
     "discord.js": "^13.1.0",
     "fs": "^0.0.1-security",
     "googleapis": "^89.0.0",
