--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@discordjs/builders": "^0.8.2",
     "@discordjs/rest": "^0.1.0-canary.0",
     "axios": "^0.24.0",
-    "axios-cache-adapter": "^2.7.3",
+    "cachios": "^3.1.1",
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.1.0",
     "fs": "^0.0.1-security",
